Large cursor is not displayed in Linux #37947

Closed
opened 2013-12-26 00:02:23 +01:00 by Cenek Strichel · 13 comments

System Information
Mint 16 Cinnamon, Ubuntu 13.10

Blender Version
7294c54

Short description of error
Set User preferences > Interface > Large Cursors. In Windows it work well but in Linux it has not effect. Cursor stay same.

**System Information** Mint 16 Cinnamon, Ubuntu 13.10 **Blender Version** 7294c54 **Short description of error** Set User preferences > Interface > Large Cursors. In Windows it work well but in Linux it has not effect. Cursor stay same.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Doest this work using the knife tool in mesh edit mode?
For many cursors its makes no changes but knife tool does.

can you confirm this?

Doest this work using the knife tool in mesh edit mode? For many cursors its makes no changes but knife tool does. can you confirm this?
Author

Yes, it is working for knife well. So not all cursor are bigger in Linux.

Yes, it is working for knife well. So not all cursor are bigger in Linux.

Added subscriber: @Sergey

Added subscriber: @Sergey

@ideasman42, so does it mean it's just a limitation caused by cursors set which we can not control from blender?

@ideasman42, so does it mean it's just a limitation caused by cursors set which we can not control from blender?

Added subscriber: @brecht

Added subscriber: @brecht

I think the only difference between Windows and other platforms here is the cross cursor in e.g. edit mode?

On all other platforms it uses a system cursor which we can't adjust the size of, on Windows it uses a custom cursor for which we have a large version. If large cursors is enabled on other platforms, it could use the custom version for the cross cursor.

(I'm not even sure why this feature exists in Blender, I would expect this to be something you tweak in your operating system settings, if you can't see your cursor well in Blender you'll have trouble in other applications too.)

I think the only difference between Windows and other platforms here is the cross cursor in e.g. edit mode? On all other platforms it uses a system cursor which we can't adjust the size of, on Windows it uses a custom cursor for which we have a large version. If large cursors is enabled on other platforms, it could use the custom version for the cross cursor. (I'm not even sure why this feature exists in Blender, I would expect this to be something you tweak in your operating system settings, if you can't see your cursor well in Blender you'll have trouble in other applications too.)

This issue was referenced by blender/blender-addons-contrib@0775e739b7

This issue was referenced by blender/blender-addons-contrib@0775e739b7f6a990550f8498b8de3655286ae051

This issue was referenced by 0775e739b7

This issue was referenced by 0775e739b7f6a990550f8498b8de3655286ae051

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0775e739b7.

Closed by commit 0775e739b7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37947
No description provided.