Fix T37947: large cursors now also work on linux/mac for the edit mode cross.